<resources>
    <string name="app_name">calculator</string>
    <string name="background">Background</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_pls">+</string>
    <string name="key_mns">-</string>
    <string name="key_mlt">x</string>
    <string name="key_div">/</string>
    <string name="key_eql">=</string>
    <string name="key_dot">,</string>
    <string name="key_bs">&lt;</string>
    <string name="key_c">c</string>
    <string name="theme">theme</string>
    <string name="themeSimple">Simple theme</string>
    <string name="themeFrame">Frame theme</string>
    <string name="themeShadow">Shadow theme</string>

</resources>