<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:contentDescription="@string/background"
        android:scaleType="fitStart"
        android:src="@drawable/backgound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        style="@style/ThemeButton"
        app:layout_constraintEnd_toEndOf="@+id/key_c"
        app:layout_constraintBottom_toTopOf="@+id/key_c"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/numberField"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/numberPrev"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/numberField"
        app:layout_constraintRight_toRightOf="@id/numberField"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/dot"
        android:layout_width="@dimen/df_dotWidth"
        android:layout_height="@dimen/df_numberSize"
        android:text="@string/key_dot"
        app:layout_constraintStart_toEndOf="@+id/numberField"
        app:layout_constraintTop_toTopOf="@+id/numberField"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bs"
        android:layout_width="@dimen/df_dotWidth"
        android:layout_height="@dimen/df_numberSize"
        android:text="@string/key_bs"
        app:layout_constraintStart_toEndOf="@+id/dot"
        app:layout_constraintTop_toTopOf="@+id/numberField"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_c"
        android:layout_width="@dimen/df_dotWidth"
        android:layout_height="@dimen/df_numberSize"
        android:text="@string/key_c"
        app:layout_constraintStart_toEndOf="@+id/bs"
        app:layout_constraintTop_toTopOf="@+id/numberField"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/n1"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/n2"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_2"
            app:layout_constraintStart_toEndOf="@+id/n1"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/n3"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_3"
            app:layout_constraintStart_toEndOf="@+id/n2"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/n4"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_4"
            app:layout_constraintStart_toEndOf="@+id/n3"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/n5"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_5"
            app:layout_constraintStart_toEndOf="@+id/n4"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/n6"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/n1"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/n7"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_7"
            app:layout_constraintStart_toEndOf="@+id/n6"
            app:layout_constraintTop_toBottomOf="@+id/n2"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/n8"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_8"
            app:layout_constraintStart_toEndOf="@+id/n7"
            app:layout_constraintTop_toBottomOf="@+id/n3"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/n9"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_9"
            app:layout_constraintStart_toEndOf="@+id/n8"
            app:layout_constraintTop_toBottomOf="@+id/n4"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/n0"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_0"
            app:layout_constraintStart_toEndOf="@+id/n9"
            app:layout_constraintTop_toBottomOf="@+id/n5"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_pls"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/n6"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_mns"
            app:layout_constraintStart_toEndOf="@+id/plus"
            app:layout_constraintTop_toBottomOf="@+id/n7"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mult"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_mlt"
            app:layout_constraintStart_toEndOf="@+id/minus"
            app:layout_constraintTop_toBottomOf="@+id/n8"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/divide"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_div"
            app:layout_constraintStart_toEndOf="@+id/mult"
            app:layout_constraintTop_toBottomOf="@+id/n9"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equals"
            android:layout_width="@dimen/df_numberSize"
            android:layout_height="@dimen/df_numberSize"
            android:text="@string/key_eql"
            app:layout_constraintStart_toEndOf="@+id/divide"
            app:layout_constraintTop_toBottomOf="@+id/n0"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>